fix: chrome horizontal overflow

--- a/buzzvel-microsite/src/app/globals.css
+++ b/buzzvel-microsite/src/app/globals.css
@@ -20,6 +20,7 @@ body {
   background-color: var(--color-dark-bg);
   padding: 0 0.5rem;
   box-sizing: border-box;
+  overflow-x: hidden;
 }
 
 @layer utilities {
